Bug 306414 - Weird appearance of pager and not resizable
Summary: Weird appearance of pager and not resizable
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-pager (other bugs)
Version First Reported In: 4.9-git
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL: http://i.imgur.com/E3QgE.png
Keywords:
: 306738 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-09-07 18:22 UTC by Yichao Yu
Modified: 2013-01-24 01:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.10
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yichao Yu 2012-09-07 18:22:19 UTC
after plasma started (login or restart) pager on the desktop often have this weird appearance as shown in the screen shot. and I am not able to make it any smaller than the size it started. (only bigger)

Reproducible: Always

Steps to Reproduce:
1. add a pager to desktop
2. make it larger
3. restart plasma
Actual Results:  
sometime the appearance is weird (screen shot) become normal when trying to resize it.
and always not able to make it smaller (only bigger)

Expected Results:  
shouldn't look like this and should be able to resize it at any time.
Comment 1 Yichao Yu 2012-12-22 00:31:32 UTC
ping? need info?
Comment 2 Yichao Yu 2012-12-22 00:34:07 UTC
screen shot update for 4.10 (4.9.95)
http://wstaw.org/m/2012/12/22/plasma-desktopPSN522.png
Comment 3 Weng Xuetian 2013-01-10 18:18:06 UTC
Git commit 1d6be2f24208f7a0f1e605c302b88a078ffad18e by Weng Xuetian.
Committed on 10/01/2013 at 19:15.
Pushed by xuetianweng into branch 'KDE/4.10'.

fix resizing and layout of pager

remove some call to setMinimumSize. set minimum size to preferredSize
will cause the minimumSize to be the size after plasma launches, which
means if you put pager on desktop, it cannot be resize to smaller size.

call layout->activate() to trigger rearrangement immediately in
updateSizes, this will fix that DeclarativeWidget initial size/position
problem.

consider 1 pixel clip rect for window positioning
REVIEW: 108329
FIXED-IN: 4.10

M  +3    -2    plasma/desktop/applets/pager/package/contents/ui/main.qml
M  +23   -37   plasma/desktop/applets/pager/pager.cpp

http://commits.kde.org/kde-workspace/1d6be2f24208f7a0f1e605c302b88a078ffad18e
Comment 4 Christoph Feck 2013-01-24 01:36:48 UTC
*** Bug 306738 has been marked as a duplicate of this bug. ***