fix resizing and layout of pager

remove some call to setMinimumSize. set minimum size to preferredSize
will cause the minimumSize to be the size after plasma launches, which
means if you put pager on desktop, it cannot be resize to smaller size.

call layout->activate() to trigger rearrangement immediately in
updateSizes, this will fix that DeclarativeWidget initial size/position
problem.

consider 1 pixel clip rect for window positioning

BUG: 306414
REVIEW: 108329
FIXED-IN: 4.10